docs/notes/configs/nfd-operator-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "Node Feature Discovery Operator"
  labels:
    openshift.io/cluster-monitoring: 'true'
  name: openshift-nfd
